--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-        <link rel="stylesheet"href="style1.css">
+        <link rel="stylesheet"href="style.css">
         <title>COVID stats</title>
 
 
@@ -44,6 +44,6 @@
             </div>
           </section>
         </div>
-       <script src = "apps1.js" async defer></script> 
+       <script src = "apps.js" async defer></script> 
     </body>
     </html>
