--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
             </div>
           </section>
         </div>
-       <script src = "apps.js" async defer></script> 
+       <script src = "app.js" async defer></script> 
     </body>
     </html>
